--- a/hsinternsorg/package.json
+++ b/hsinternsorg/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.12.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.24",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.4.0"
+    "react-element-to-jsx-string": "^15.0.0",
+    "tailwind-merge": "^2.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
