--- a/hsinternsorg/package.json
+++ b/hsinternsorg/package.json
@@ -1,5 +1,36 @@
 {
+  "name": "hsinternsorg",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "tailwind": "^4.0.0"
+    "@react-three/drei": "^9.109.5",
+    "@react-three/fiber": "^8.17.5",
+    "@tabler/icons-react": "^3.12.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.3.24",
+    "mini-svg-data-uri": "^1.4.4",
+    "next": "14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-element-to-jsx-string": "^15.0.0",
+    "react-icons": "^5.3.0",
+    "tailwind-merge": "^2.5.0",
+    "three": "^0.167.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
